# spectrum

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
spectrum/: __init__.py  config.py  errors.py  instance.py  manager.py  ports.py  recon.py  runtime.py  settings.py
spectrum/async_spectrum/: __init__.py  instance.py  manager.py
spectrum/strategies/: __init__.py  base.py  perimeterx.py  recon.py  registry.py
spectrum/sync_spectrum/: __init__.py  instance.py  manager.py
