[project]
name = "spectrum"
version = "0.1.0"
description = "CDP browser launcher core"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["websocket-client"]

[project.optional-dependencies]
dev = ["pre-commit", "ruff"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["spectrum*"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I"]
